--- a/deployment/aws-connect-vm.template
+++ b/deployment/aws-connect-vm.template
@@ -2324,6 +2324,8 @@
       "Type": "AWS::S3::Bucket",
       "Properties": {
         "AccessControl": "LogDeliveryWrite",
+        "OwnershipControls":
+          { "Rules": [{ "ObjectOwnership": "BucketOwnerPreferred" }] },
         "VersioningConfiguration": {
           "Status": "Enabled"
         },
