--- a/source/aws-connect-vm-serverless/serverless.yml
+++ b/source/aws-connect-vm-serverless/serverless.yml
@@ -448,21 +448,14 @@ resources:
             Projection:
               ProjectionType: ALL
 
-    # Kinesis
-    # DataStream:
-    #   Type: AWS::Kinesis::Stream
-    #   Properties:
-    #     RetentionPeriodHours: !Ref DataStreamRetention
-    #     ShardCount: !Ref DataStreamShardCount
-    #     StreamEncryption:
-    #       EncryptionType: KMS
-    #       KeyId: alias/aws/kinesis
-
     # Bucket
     AudioRecordingsBucket:
       Type: AWS::S3::Bucket
       Properties:
         AccessControl: LogDeliveryWrite
+        OwnershipControls:
+  		    Rules:
+    			  - ObjectOwnership: BucketOwnerPreferred
         VersioningConfiguration:
           Status: Enabled
         PublicAccessBlockConfiguration:
