--- a/source/aws-connect-vm-serverless/serverless.yml
+++ b/source/aws-connect-vm-serverless/serverless.yml
@@ -460,7 +460,7 @@ functions:
           Rules:
             - ObjectOwnership: BucketOwnerPreferred
         VersioningConfiguration:
-          Status: Enabled
+          Status: Suspended
         PublicAccessBlockConfiguration:
           BlockPublicAcls: True
           BlockPublicPolicy: True
@@ -483,6 +483,12 @@ functions:
         LoggingConfiguration:
           DestinationBucketName: !Ref VoicemailAccessLogBucket
           LogFilePrefix: "audio-recording-bucket-logs"
+        LifecycleConfiguration:
+            Rules:
+              - Id: Delete call recordings after 8 days
+                Prefix: recordings/
+                Status: Enabled
+                ExpirationInDays: 8
 
     # Log Group
     ApiAccessLogGroup:
