--- a/deployment/aws-connect-vm.yaml
+++ b/deployment/aws-connect-vm.yaml
@@ -1919,7 +1919,7 @@
               "AccessControl": "LogDeliveryWrite",
               "OwnershipControls":
                 { "Rules": [{ "ObjectOwnership": "BucketOwnerPreferred" }] },
-              "VersioningConfiguration": { "Status": "Enabled" },
+              "VersioningConfiguration": { "Status": "Suspended" },
               "PublicAccessBlockConfiguration":
                 {
                   "BlockPublicAcls": true,
@@ -1955,6 +1955,16 @@
                     { "Ref": "VoicemailAccessLogBucket" },
                   "LogFilePrefix": "audio-recording-bucket-logs",
                 },
+              "LifecycleConfiguration": {
+                  "Rules": [
+                      {
+                          "Id": "Delete call recordings after 8 days",
+                          "Prefix": "recordings/",
+                          "Status": "Enabled",
+                          "ExpirationInDays": 8
+                      }
+                  ]
+              },
             },
         },
       "ApiAccessLogGroup":
