Update Bucket Versioning Suspended

--- a/voicemail-for-amazon-connect.template
+++ b/voicemail-for-amazon-connect.template
@@ -298,7 +298,7 @@ Resources:
           IgnorePublicAcls: True
           RestrictPublicBuckets: True
         VersioningConfiguration:
-          Status: Enabled
+          Status: Suspended
         WebsiteConfiguration:
           IndexDocument: 'index.html'
           ErrorDocument: 'error.html'
