--- a/source/aws-connect-vm-serverless/serverless.yml
+++ b/source/aws-connect-vm-serverless/serverless.yml
@@ -974,6 +974,11 @@ functions:
                   Resource: !Ref CTRStreamArn
                 - Effect: Allow
                   Action:
+                    - kms:Decrypt
+                    - kms:GenerateDataKey
+                  Resource: !Ref KMSKeyArn
+                - Effect: Allow
+                  Action:
                     - dynamodb:PutItem
                   Resource: !GetAtt ContactVoicemailTable.Arn
                 - Effect: Allow
