--- a/deployment/aws-connect-vm.yaml
+++ b/deployment/aws-connect-vm.yaml
@@ -561,7 +561,7 @@
               "Runtime": "java8.al2",
               "MemorySize": 1024,
               "Timeout": 900,
-              "Description": "Process recording via CTR\n",
+              "Description": "Process recording via CTR",
               "Environment":
                 {
                   "Variables":
